--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
         <module>netty</module>
         <module>sort</module>
         <module>common</module>
-        <module>messageTest</module>
+        <module>transactional</module>
     </modules>
 
     <parent>
