--- a/transactional/module-c/src/main/resources/application.yml
+++ b/transactional/module-c/src/main/resources/application.yml
@@ -45,3 +45,16 @@ logging:
 tx-lcn:
   client:
     manager-address: 127.0.0.1:7890
+  logger:
+    enabled: true
+    driver-class-name: ${spring.datasource.druid.driver-class-name}
+    jdbc-url: ${spring.datasource.druid.url}
+    username: ${spring.datasource.druid.username}
+    password: ${spring.datasource.druid.password}
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka/
+  instance:
+    ip-address: 127.0.0.1
+    prefer-ip-address: true
