--- a/alibaba/nacos-consumer/pom.xml
+++ b/alibaba/nacos-consumer/pom.xml
@@ -32,6 +32,11 @@
             <version>2.1.1.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
